--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -9,3 +9,6 @@ jobs:
     uses: prashumps/roboshop-github-actions/.github/workflows/ci-main.yml@main
     with:
       appType: 'python'
+      appName: 'payment'
+    secrets:
+      vault_token: '${{ secrets.vault_token }}'
